# LastLetter

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  garage.toml  pyproject.toml
certs/: public.pem
docker/: Dockerfile  docker-compose.yml
monitoring/: config.alloy  loki-config.yaml  prometheus.yml  tempo.yaml
src/: alembic.ini  config.py  entrypoint.py
src/api/v1/endpoints/: auth.py  capsules.py  users.py  verification.py
src/api/v1/schemas/: failed_response.py  pagination.py  success_response.py
src/core/: constants.py  exception_handler.py  logging_config.py  middleware.py  telemetry.py
src/infrastructure/: engine.py  filter.py
src/infrastructure/db/migrations/: env.py
src/infrastructure/db/migrations/versions/: 2026_06_03_0737-91a23a31c261_seed_roles.py  2026_06_03_0737-cf12dd70e5a2_add_auth_tables.py  2026_06_10_0820-88e24f79f647_add_contents_table.py  (+3 more)
src/infrastructure/db/models/: __init__.py  base.py  capsule.py  content.py  parent_child.py  role.py  user.py  user_capsule.py  user_role.py
src/modules/auth/: dependencies.py  exception.py  exceptions.py  factory.py  schemas.py  service.py
src/modules/capsules/: dependencies.py  exceptions.py  factories.py  filter.py  repository.py  schemas.py  service.py
src/modules/email/: service.py  tasks.py  templates.py
src/modules/user/: dependencies.py  exceptions.py  factories.py  filter.py  repository.py  schemas.py  service.py
src/modules/verification/: dependencies.py  service.py
src/services/s3/: client.py  dependency.py
src/utils/auth/: jwt.py  secure.py
