[project]
name = "lastletter"
version = "0.1.0"
description = ""
authors = [
    {name = "13PurpleHaze",email = "kowalskiczeslaw399@gmail.com"}
]
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.136.3,<0.137.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "uvicorn (>=0.48.0,<0.49.0)",
    "sqlalchemy (>=2.0.50,<3.0.0)",
    "pydantic[email] (>=2.13.4,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "ruff (>=0.15.15,<0.16.0)",
    "pyjwt (>=2.13.0,<3.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "aiosmtplib (>=5.1.1,<6.0.0)",
    "dramatiq[rabbitmq,watch] (>=2.2.0,<3.0.0)",
    "python-multipart (>=0.0.31,<0.0.32)",
    "aioboto3 (>=15.5.0,<16.0.0)",
    "uuid (>=1.30,<2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pre-commit (>=4.6.0,<5.0.0)"
]
